# acdc-schema-json

./: .gitignore  ACDCSchemaDev_commit_ref.txt  README.md  acdc_schema.json  acdc_schema_resolved.json  notebook.ipynb  pyproject.toml
.github/workflows/: deploy_to_test.yaml  validate.yaml
dictionary/: _definitions.yaml  copy_to_prod.sh  copy_to_test.sh  genomics_assay.yaml  input_dd.yaml  lipidomics_assay.yaml  proteomics_assay.yaml  qc_file.yaml  serum_marker_assay.yaml  supplementary_file.yaml
dictionary/enums/: acdc_enum_definitions.csv
dictionary/prod_dict/: _definitions.yaml  _settings.yaml  acdc_schema.json  acknowledgement.yaml  analysis_workflow.yaml  blood_pressure_test.yaml  clinical_descriptor.yaml  core_metadata_collection.yaml  data_release.yaml  demographic.yaml  exposure.yaml  genomics_assay.yaml  genomics_file.yaml  imaging_file.yaml  lab_result.yaml  lipidomics_assay.yaml  lipidomics_file.yaml  medical_history.yaml  medication.yaml  metabolomics_assay.yaml  metabolomics_file.yaml  program.yaml  project.yaml  proteomics_assay.yaml  proteomics_file.yaml  publication.yaml  qc_file.yaml  release.yaml  sample.yaml  serum_marker_assay.yaml  serum_marker_file.yaml  subject.yaml  supplementary_file.yaml
dictionary/test_dict/: _definitions.yaml  _settings.yaml  acdc_schema.json  acknowledgement.yaml  analysis_workflow.yaml  blood_pressure_test.yaml  bundled.json  clinical_descriptor.yaml  (+27 more)
docs/: acdc_proteomics_metabolomics_methods_and_rationale.md
scripts/: add_enum_to_def.py  pull_dict.sh  update_definitions_with_enums.py  upload_dictionary.py
